# kn1ght

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hello.py  pyproject.toml
notebooks/: build-puzzle-dataset.ipynb  evaluation.ipynb  format-dataset.ipynb  generate-training-data.ipynb  hf-tokenizer.ipynb  model-exploration.ipynb  model-training-copy.ipynb  tokenize-exploration.ipynb  tokenize.ipynb
scripts/: dpo.py  export.py  finetune.py  sft_chain.py  sync-puzzles.py  train-tokenizer.py  train.py  upload.py
src/kn1ght/: __init__.py  constants.py
src/tokenizer/: kn1ght-merges.txt  kn1ght-tokenizer.json  kn1ght-vocab.json
