[project]
name = "kn1ght"
version = "0.1.0"
description = "A language model for PGN notation"
readme = "README.md"
authors = [
    { name = "Eric Allen", email = "eric@ericrallen.dev" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "tokenizers>=0.21.0",
]

[project.scripts]
kn1ght = "kn1ght:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
