[project]
name = "kn1ght"
version = "0.1.0"
description = "A language model for PGN notation"
readme = "README.md"
authors = [
    { name = "Eric Allen", email = "eric@ericrallen.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.28.0",
    "chess>=1.10.0",
    "datasets>=3.2.0",
    "matplotlib>=3.8.0",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "tokenizers>=0.21.0",
    "torch>=2.5.0",
    "transformers>=4.40.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbstripout>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
